Fixed btn-spacing on account page and change address position on cart page

--- a/sass/mixins/_mixins-master.scss
+++ b/sass/mixins/_mixins-master.scss
@@ -38,7 +38,7 @@
     text-align: center;
 	line-height: 25px;
 	padding: 2px 5px;
-	letter-spacing: 0.1em;;
+	letter-spacing: 0.1em;
 	font-size: 0.9em;
 }
 
