--- a/sass/shop/_cart.scss
+++ b/sass/shop/_cart.scss
@@ -279,7 +279,7 @@
                                             text-align: left;
                                         }
                                         form.woocommerce-shipping-calculator {
-                                            transform: translate(0, -1.4rem);
+                                            padding-bottom: 0.5rem;
                                             a.shipping-calculator-button {
                                                 text-decoration: underline;
                                                 color: #5E6850;
